--- a/package.json
+++ b/package.json
@@ -2,23 +2,55 @@
   "name": "ts-browser-helpers",
   "version": "0.1.0",
   "description": "A collection of utility classes and functions for javascript/typescript projects, for use in the browser.",
-  "main": "dist/bundle.min.js",
-  "module": "dist/bundle.esm.js",
-  "browser": "dist/bundle.umd.js",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "module": "src/index.ts",
+  "types": "src/index.ts",
   "sources": "src/index.ts",
   "scripts": {
+    "new:pack": "npm run prepare && clean-package && npm pack && clean-package restore",
+    "new:publish": "npm run prepare && clean-package && npm publish && clean-package restore",
     "build": "NODE_ENV=production rollup -c",
     "dev": "rollup -c -w",
     "serve-docs": "ws -d docs -p 8080",
     "docs": "npx typedoc --readme none ./src/index.ts",
-    "prepare": "npm run build"
+    "prepare": "npm run build && npm run docs"
   },
+  "clean-package": {
+    "remove": [
+      "clean-package",
+      "scripts",
+      "devDependencies",
+      "optionalDependencies"
+    ],
+    "replace": {
+      "main": "dist/bundle.min.js",
+      "module": "dist/bundle.esm.js",
+      "browser": "dist/bundle.umd.js",
+      "types": "dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist",
+    "src",
+    "docs",
+    "tsconfig.json"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/repalash/ts-browser-helpers.git"
+    "url": "git://github.com/repalash/ts-browser-helpers.git"
   },
-  "keywords": ["typescript", "util", "browser", "esm", "reflection", "object", "dom", "encryption", "svg", "canvas"],
+  "keywords": [
+    "typescript",
+    "util",
+    "browser",
+    "esm",
+    "reflection",
+    "object",
+    "dom",
+    "encryption",
+    "svg",
+    "canvas"
+  ],
   "author": "repalash <palash@shaders.app>",
   "license": "MIT",
   "bugs": {
@@ -31,6 +63,7 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@rollup/plugin-typescript": "^9.0.2",
+    "clean-package": "^2.2.0",
     "local-web-server": "^5.2.1",
     "rollup": "^3.4.0",
     "rollup-plugin-license": "^3.0.1",
