--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "new:pack": "npm run prepare && clean-package && npm pack && clean-package restore",
     "new:publish": "npm run prepare && clean-package && npm publish && clean-package restore",
-    "build": "rimraf dist ; NODE_ENV=production rollup -c",
+    "build": "rimraf dist && NODE_ENV=production rollup -c",
     "dev": "rollup -c -w",
     "serve-docs": "ws -d docs -p 8080",
     "docs": "rimraf docs ; npx typedoc --readme none ./src/index.ts",
