--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
         "noUnusedParameters": true,
         "removeComments": false,
         "preserveConstEnums": true,
-        "moduleResolution": "node",
+        "skipLibCheck": true,
+        "moduleResolution": "bundler",
         "emitDecoratorMetadata": true,
         "sourceMap": true,
         "target": "es2018",
