--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-browser-helpers",
-  "version": "0.16.2",
+  "version": "0.16.3",
   "description": "A collection of utility classes, functions and decorators for javascript/typescript projects, for use in the browser.",
   "main": "dist/bundle.esm.js",
   "module": "dist/bundle.esm.js",
@@ -16,6 +16,7 @@
     "test": "npm run check",
 
     "docs": "rimraf docs ; npx typedoc --readme none ./src/index.ts",
+    "docs-mk": "rimraf docs ; npx typedoc --readme none --plugin typedoc-plugin-markdown ./src/index.ts --indexFormat table",
     "prepare": "npm run build && npm run docs",
     "prepublishOnly": "npm run test",
     "check": "tsc -p tsconfig.json --noEmit",
@@ -82,7 +83,7 @@
     "vite-plugin-dts": "^4.4.0",
     "rimraf": "^6.0.1",
     "@rollup/plugin-replace": "^6.0.2",
-    "typedoc-plugin-markdown": "^3.15.3"
+    "typedoc-plugin-markdown": "^4.4.2"
   },
   "dependencies": {
     "@types/wicg-file-system-access": "^2020.9.5"
